--- a/css/style.css
+++ b/css/style.css
@@ -670,7 +670,7 @@ a {
   font-size: 2rem;
   color: #b9c3cf;
   letter-spacing: 1px;
-  margin: 2rem 0 5rem;
+  margin: 3rem 2rem 5rem;
 }
 .banner-image {
   width: 100%;
